--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.1",
-    "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -39,7 +38,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "react-scripts": "^5.0.0"
   },
   "homepage": "https://areyouivan.github.io/react-introduction"
 }
